<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideInset"
        android:background="?attr/backgroundColor"
        android:clipChildren="false"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/list_horizontal_margin"
            android:layout_marginBottom="10dp"

            android:clipChildren="false"
            android:clipToPadding="false">

            <androidx.cardview.widget.CardView
                android:id="@+id/lensMaxWearCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/countdown_margin"
                android:layout_marginHorizontal="@dimen/list_horizontal_margin"
                app:contentPadding="@dimen/list_horizontal_margin"

                android:clipChildren="false"
                android:clipToPadding="false"

                app:cardPreventCornerOverlap="true"
                app:cardMaxElevation="@dimen/card_elevation"
                app:cardElevation="@dimen/card_elevation"
                app:cardBackgroundColor="?attr/backgroundTint"
                app:cardCornerRadius="@dimen/card_radius">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"

                    android:clipChildren="false"
                    android:clipToPadding="false">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/list_horizontal_margin"

                        android:labelFor="@id/lensDurationDay"
                        android:text="@string/settings_title_duration_day"
                        android:textSize="@dimen/countdown_title_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/lensDurationDay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/list_horizontal_margin"
                            android:layout_weight=".8"

                            android:autofillHints="@string/settings_autofill_duration_day"
                            android:imeOptions="actionDone"

                            app:backgroundTint="?attr/editTextColor"

                            android:ems="10"
                            android:inputType="numberDecimal"
                            tools:text="@sample/numbers.json/numbers/numbers_0.30/number"
                            android:textAlignment="textEnd" />

                        <TextView
                            android:id="@+id/measurementLensDurationDay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/list_horizontal_margin"
                            android:layout_weight="1"

                            android:text="@string/settings_measurement_duration_day"
                            android:textSize="@dimen/countdown_title_size" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/lensEarlyRemoveCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/countdown_margin"
                android:layout_marginHorizontal="@dimen/list_horizontal_margin"
                app:contentPadding="@dimen/list_horizontal_margin"

                android:clipChildren="false"
                android:clipToPadding="false"

                app:cardPreventCornerOverlap="true"
                app:cardMaxElevation="@dimen/card_elevation"
                app:cardElevation="@dimen/card_elevation"
                app:cardBackgroundColor="?attr/backgroundTint"
                app:cardCornerRadius="@dimen/card_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:clipChildren="false"
                    android:clipToPadding="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/list_horizontal_margin"

                            android:labelFor="@id/lensNotificationDay"
                            android:text="@string/settings_title_notification_day"
                            android:textSize="@dimen/countdown_title_size" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/lensNotificationDay"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/list_horizontal_margin"
                                android:layout_weight=".8"

                                android:autofillHints="@string/settings_autofill_notification_day"
                                android:imeOptions="actionDone"

                                app:backgroundTint="?attr/editTextColor"

                                android:ems="10"
                                android:inputType="numberDecimal"
                                tools:text="@sample/numbers.json/numbers/numbers_0.30/number"
                                android:textAlignment="textEnd" />

                            <TextView
                                android:id="@+id/measurementLensNotificationDay"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="@dimen/list_horizontal_margin"
                                android:layout_weight="1"

                                android:text="@string/settings_measurement_notification_day"
                                android:textSize="@dimen/countdown_title_size" />
                        </LinearLayout>

                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/lensNotificationDayEnabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/list_horizontal_margin"
                        android:text="@string/settings_earlyNotification_title_day"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginVertical="@dimen/divider_hor_margin"
                android:background="?android:attr/listDivider" />

            <androidx.cardview.widget.CardView
                android:id="@+id/lensReplaceCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/countdown_margin"
                android:layout_marginHorizontal="@dimen/list_horizontal_margin"
                app:contentPadding="@dimen/list_horizontal_margin"

                android:clipChildren="false"
                android:clipToPadding="false"

                app:cardPreventCornerOverlap="true"
                app:cardMaxElevation="@dimen/card_elevation"
                app:cardElevation="@dimen/card_elevation"
                app:cardBackgroundColor="?attr/backgroundTint"
                app:cardCornerRadius="@dimen/card_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:clipChildren="false"
                    android:clipToPadding="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/list_horizontal_margin"

                            android:labelFor="@id/lensDurationFull"
                            android:text="@string/settings_title_duration_full"
                            android:textSize="@dimen/countdown_title_size" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/lensDurationFull"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/list_horizontal_margin"
                                android:layout_weight=".8"

                                android:autofillHints="@string/settings_autofill_duration_full"
                                android:imeOptions="actionDone"

                                app:backgroundTint="?attr/editTextColor"

                                android:ems="10"
                                android:inputType="number"
                                tools:text="@sample/numbers.json/numbers/numbers_0.30/number"
                                android:textAlignment="textEnd" />

                            <TextView
                                android:id="@+id/measurementLensDurationFull"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="@dimen/list_horizontal_margin"
                                android:layout_weight="1"

                                android:text="@string/settings_measurement_duration_full"
                                android:textSize="@dimen/countdown_title_size" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/list_horizontal_margin"

                            android:labelFor="@id/lensNotificationTimeFull"
                            android:text="@string/settings_title_notificationTime_full"
                            android:textSize="@dimen/countdown_title_size" />

                        <Button
                            android:id="@+id/lensNotificationTimeFull"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/list_horizontal_margin"

                            android:backgroundTint="?attr/buttonBarNeutralButtonStyle"

                            android:onClick="pickTime"

                            tools:text="@tools:sample/date/hhmm"
                            android:textAlignment="center" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/lensEarlyReplaceCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/countdown_margin"
                android:layout_marginHorizontal="@dimen/list_horizontal_margin"
                app:contentPadding="@dimen/list_horizontal_margin"

                android:clipChildren="false"
                android:clipToPadding="false"

                app:cardPreventCornerOverlap="true"
                app:cardMaxElevation="@dimen/card_elevation"
                app:cardElevation="@dimen/card_elevation"
                app:cardBackgroundColor="?attr/backgroundTint"
                app:cardCornerRadius="@dimen/card_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:clipChildren="false"
                    android:clipToPadding="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/list_horizontal_margin"

                            android:labelFor="@id/lensNotificationFull"
                            android:text="@string/settings_title_notification_full"
                            android:textSize="@dimen/countdown_title_size" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/lensNotificationFull"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/list_horizontal_margin"
                                android:layout_weight=".8"

                                android:autofillHints="@string/settings_autofill_notification_full"
                                android:imeOptions="actionDone"

                                app:backgroundTint="?attr/editTextColor"

                                android:ems="10"
                                android:inputType="number"
                                tools:text="@sample/numbers.json/numbers/numbers_0.30/number"
                                android:textAlignment="textEnd" />

                            <TextView
                                android:id="@+id/measurementLensNotificationFull"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="@dimen/list_horizontal_margin"
                                android:layout_weight="1"

                                android:text="@string/settings_measurement_notification_full"
                                android:textSize="@dimen/countdown_title_size" />
                        </LinearLayout>
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/lensNotificationFullEnabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/list_horizontal_margin"
                        android:text="@string/settings_earlyNotification_title_full"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>